# sc2-serializer

./: .buildinfo  .clang-format  .clang-tidy  .cmake-format.yaml  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakeSettings.json  Dockerfile  Doxyfile  LICENSE  MANIFEST.in  README.md  annotated.html  benchmark.html  classes.html  concepts.html  croissant.json  custom_dataset.html  dataloading.html  dir_000000_000001.html  dir_000001_000000.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.dot  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_ebed218ca042e0cae3861bf18b14f766.html  dir_ebed218ca042e0cae3861bf18b14f766_dep.dot  dir_ebed218ca042e0cae3861bf18b14f766_dep.map  dir_ebed218ca042e0cae3861bf18b14f766_dep.md5  docker-compose.yml  doxygen_crawl.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_type.html  functions_vars.html  (+142 more)
.github/workflows/: dockerbuild.yml  readthedocs.yml  test.yml
API/: dataset.py
_modules/: find_all_versions.html  index.html  inspect_replay.html  make_partitions.html  merge_info_yaml.html  replay_parallel.html  replay_sql.html  review_resources.html
_modules/sc2_replay_reader/: example.html  sampler.html
_modules/sc2_serializer/: example.html  sampler.html
_sources/: benchmark.rst.txt  custom_dataset.rst.txt  dataloading.rst.txt  index.rst.txt  replay_data.rst.txt
_sources/api/: benchmark.rst.txt  data.rst.txt  index.rst.txt  replay_parsing.rst.txt  serializer.rst.txt
_sources/cpp_api/: data_structures.rst.txt  index.rst.txt  serializer.rst.txt  vectorize.rst.txt
_sources/sc2_replay_reader/: __init__.py  sampler.py
api/: api.py  benchmark.html  data.html  download.py  file_links.py  index.html  observer.html  replay_parsing.html  serializer.html  utils.py  yeet.py
cmake/: CPM.cmake
cpp_api/: data_structures.html  index.html  observer.html  replay_parsing.html  serializer.html  soa.html  vectorize.html
d0/d04/: replay__interface_8hpp.html
d0/d05/: structcvt_1_1NeutralUnit.html
d0/d1f/: unioncvt_1_1Action_1_1Target__coll__graph.dot  unioncvt_1_1Action_1_1Target__coll__graph.map  unioncvt_1_1Action_1_1Target__coll__graph.md5
d0/d38/: structcvt_1_1StepData__coll__graph.dot  structcvt_1_1StepData__coll__graph.map  structcvt_1_1StepData__coll__graph.md5
d0/d50/: enums_8hpp__dep__incl.dot  enums_8hpp__dep__incl.map  enums_8hpp__dep__incl.md5
d0/d99/: replay__all_8hpp__incl.dot  replay__all_8hpp__incl.map  replay__all_8hpp__incl.md5
d0/da0/: structcvt_1_1_resource_obs.html
d0/db6/: classcvt_1_1FullConverter.html
d0/dc0/: structfmt_1_1formatter_3_01cvt_1_1CloakState_01_4__coll__graph.dot  structfmt_1_1formatter_3_01cvt_1_1CloakState_01_4__coll__graph.md5
d0/dd5/: structcvt_1_1FlattenedData.html
d0/de8/: structcvt_1_1_replay_data2_so_a-members.html
d1/d0a/: structcvt_1_1_image.html
d1/d15/: structcvt_1_1Action-members.html
d1/d1c/: structcvt_1_1DatabaseInterface.html
d1/d31/: serialize_8hpp.html
d1/d39/: structcvt_1_1StepData.html
d1/d48/: structcvt_1_1_score.html
d1/d55/: vectorize_8hpp__incl.map  vectorize_8hpp__incl.md5
d1/d64/: structcvt_1_1StepDataNoUnitsMinimapSoA.html
d1/d6b/: conceptcvt_1_1_has_minimap_data.html
d1/d6c/: structcvt_1_1ResourceObs__coll__graph.dot  structcvt_1_1ResourceObs__coll__graph.map  structcvt_1_1ResourceObs__coll__graph.md5  structcvt_1_1_unit.html
d1/d8b/: structfmt_1_1formatter_3_01cvt_1_1Result_01_4.html
d1/d9e/: structcvt_1_1DatabaseInterface_3_01ReplayDataSoA_01_4-members.html
d1/daa/: structcvt_1_1_database_interface_3_01_replay_data_so_a_01_4-members.html
d1/db5/: structfmt_1_1formatter_3_01cvt_1_1_race_01_4-members.html
d1/dbb/: structfmt_1_1formatter_3_01cvt_1_1_alliance_01_4.html
d1/dc9/: structfmt_1_1formatter_3_01cvt_1_1CloakState_01_4.html
d1/ddf/: replay__minimaps_8hpp__incl.dot  replay__minimaps_8hpp__incl.map  replay__minimaps_8hpp__incl.md5
d1/df0/: structcvt_1_1_step_data.html
d1/df6/: structfmt_1_1formatter_3_01cvt_1_1_result_01_4.html
d1/dfe/: structcvt_1_1StepDataNoUnitsMiniMap__coll__graph.dot  structcvt_1_1StepDataNoUnitsMiniMap__coll__graph.map  (+1 more)
d2/d0c/: conceptcvt_1_1HasMinimapData.html
docs/: conf.py  custom_dataset.rst  dataloading.rst  index.rst  replay_data.rst  scripts.rst
docs_sphinx/: Doxyfile  conf.py  index.rst
include/: data.hpp  data_structures.hpp  database.hpp  enums.hpp  generated_info.hpp  instance_transform.hpp  observer.hpp  observer_utils.hpp  replay_parsing.hpp  replay_structures.hpp  serialize.hpp  soa.hpp  unit_ids.hpp  vectorize.hpp  versions.cpp
lightspeed/: CMakeLists.txt  README.md  lightspeed.cpp
scripts/: analyze_database.py  find_all_versions.py  gen_database.py  gen_info_db.py  gen_info_headder.py  gen_info_header.py  gen_info_yaml.py  gen_sql_database.py  generate_enum.py  inspect_replay.py  make_partitions.py  merge_databases.py  merge_info_yaml.py  replay_parallel.py  replay_sql.py  review_resources.py  summaryStats.py  type_info.py  utils.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  concepts_0.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  (+40 more)
source/: conf.py
src/: aos_impl.cpp  array_struct_impl.cpp  bindings.cpp  converter.cpp  database.cpp  getReplayVersion.py  observer.cpp  observer_utils.cpp  observer_v1.cpp  observer_v2.cpp  py_replay_parser.cpp  py_tech_state.cpp  pyreader.cpp  replay_structures.cpp  upgrade_state.cpp
test/: test_database.cpp  test_python.py  test_readwrite.cpp  test_serialization.cpp  test_soa.cpp  test_torch_dataset.py  test_vectorization.cpp
womd/: README.md  _womd_binding.pyi  convert.py  datapipe.py  womd_binding.cpp
(+374 files in other folders)
