[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "ninja",
    "cmake>=3.25",
    "pybind11-stubgen @ git+https://github.com/5had3z/pybind11-stubgen.git",
    "black",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sc2_serializer = ["*.yaml"]

[project]
name = "sc2_serializer"
authors = [
    { name = "Bryce Ferenczi", email = "frenzi@hotmail.com.au" },
    { name = "Rhys Newbury", email = "newbury777@gmail.com" },
]
version = "0.0.1"
description = "Python bindings to read files from sc2-serializer"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = ["numpy"]

[project.optional-dependencies]
dev = [
    "torch>=1.11.0",
    "typer>=0.9.0",
    "pysc2",
    "matplotlib",
    "opencv-python",
    "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/5had3z/sc2-serializer"

[tool.ruff]
ignore = ['E741']
line-length = 100
