[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "ninja",
    "cmake>=3.25,<4.0.0",
    "pybind11-stubgen @ git+https://github.com/5had3z/pybind11-stubgen.git",
    "black",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sc2_serializer = ["*.yaml", "include/*.hpp"]

[project]
name = "sc2_serializer"
authors = [
    { name = "Bryce Ferenczi", email = "frenzi@hotmail.com.au" },
    { name = "Rhys Newbury", email = "newbury777@gmail.com" },
]
version = "0.0.1"
description = "Python bindings to read files from sc2-serializer"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = ["numpy"]

[project.optional-dependencies]
dev = [
    "torch>=1.11.0",
    "typer>=0.9.0",
    "pysc2",
    "matplotlib",
    "opencv-python",
    "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/5had3z/sc2-serializer"

[tool.ruff]
line-length = 100
extend-exclude = ["3rdparty"]


[tool.ruff.lint]
ignore = [
    "A001",
    "ANN101",
    "ANN102",
    "ANN401",
    "ARG001",
    "B008",
    "B023",
    "E741",
    "ERA001",
    "FBT001",
    "FBT003",
    "N802",
    "N803",
    "N806",
    "N812",
    "N815",
    "PLR0913",
    "PLR2004",
    "S101",
    "S602",
    "S603",
    "S607",
    "S608",
    "T201"
]
select = [
    "A",
    "ARG",
    "B",
    "C4",
    "C90",
    "E",
    "ERA",
    "F",
    "FBT",
    "ICN",
    "I",
    "ISC",
    "N",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PLE",
    "PLR",
    "Q",
    "RUF",
    "S",
    "SIM",
    "T",
    "UP",
    "W",
]
